have hamburger menu in progress. Completed the side drawer component and the hamburger button. Have the onclick for the hamburger icon that shows the side drawer

--- a/split-music/src/App.css
+++ b/split-music/src/App.css
@@ -4,3 +4,10 @@ body {
   background-position: top center;
   background-size: cover;
 }
+
+.title{
+  color: rgb(219, 163, 89);
+  margin: 130px 0px 0px 0px;
+  font-size: 40px;
+  font-weight: 200;
+}
