--- a/split-music/src/Templates/Track.css
+++ b/split-music/src/Templates/Track.css
@@ -1,9 +1,9 @@
 ./*ARTIST/TRACK*/-entry{
-    margin: 180px 50px 0px 50px;
-    background: url('https://i.imgur.com/pSxi1J1.jpg');
+    margin: 90px 50px 50px 50px;
+    background: url('https://i.imgur.com/o0KfpxC.jpg?1');
     background-size: cover;
     padding:10px 10px 25px 10px;
-    border: 2x solid rgb(219, 163, 89);
+    border: 1px solid rgb(219, 163, 89);
     border-radius: 3px;
 }
 
@@ -15,43 +15,36 @@
     padding: 0px 40px 0px 40px;
     text-decoration: none;
     font-weight: 600;
-    color: black;
+    color:rgb(205 205 193);
 }
 
-./*ARTIST/TRACK*/-date{
+.date{
     text-decoration: none;
     font-weight: 400;
     font-size: 20px;
-    color: rgba(34, 32, 33, .9);
-    background-color: rgba(255,255,240, .3);
-    border: solid 1px rgba(34, 32, 33, .8);
-    border-radius: 3px;
+    color:rgb(205 205 193);
     padding: 0px 15px 0px 15px;
 }
 
-./*ARTIST/TRACK*/-player{
+.player{
     display: inline-flex;
     max-height: 200px;
 }
 
-./*ARTIST/TRACK*/-genre{
+.genre{
     text-decoration: none;
     font-weight: 400;
     font-size: 20px;
-    color: rgba(34, 32, 33, .9);
-    background-color: rgba(255,255,240, .3);
-    border: solid 1px rgba(34, 32, 33, .8);
-    border-radius: 3px;
+    color:rgb(205 205 193);
     padding: 0px 10px 0px 10x;
+    text-align: left;
+    width: ;
 }
 ./*ARTIST*/-link-container{
     text-decoration: none;
     font-weight: 400;
     font-size: 25px;
-    color: rgba(34, 32, 33, .9);
-    background-color: rgba(255,255,240, .3);
-    border: solid 1px rgba(34, 32, 33, .8);
-    border-radius: 3px;
+    color:rgb(205 205 193);
     padding: 0px 15px 0px 15px;
 }
 
@@ -59,11 +52,12 @@
     text-decoration: none;
     font-weight: 400;
     font-size: 25px;
-    color: rgba(34, 32, 33, .9);
-    /* text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-    1px 1px 0 #000;  */
+    color: rgb(219, 163, 89);
+    padding: 0px 5px 0px 5px;
+    background-color: rgba(34, 32, 33, .8);
     border-radius: 3px;
+}
+
+./*ARTIS/TRACK*/-description{
+    color:rgb(205 205 193);
 }
