--- a/split-music/src/Sidedrawer.css
+++ b/split-music/src/Sidedrawer.css
@@ -7,7 +7,14 @@
     left: 0;
     width: 400px;
     z-index: 200;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease-out;
 }
+
+.side-drawer.open{
+    transform: translateX(0);
+}
+
 
 .side-drawer ul{
     list-style: none;
