--- a/split-music/src/Header1.css
+++ b/split-music/src/Header1.css
@@ -1,10 +1,10 @@
 .header-wrapper {
     position: fixed;
-    padding: 0x;
     width: 100%;
     /* z-index: 2; */
-    display: inline-flex;
-    justify-content: space-around;
+    display: flex;
+    /* margin:10px; */
+    justify-content: space-between;
     align-items: center;
     background-color: rgba(34, 32, 33, .8);
     color: rgb(219, 163, 89);
@@ -13,36 +13,21 @@
     left:0;
     margin-bottom: 1px; 
     /* image: url('https://i.imgur.com/ya49W4U.jpg'); */
-    
-
 }
 
-.header-link{
-    justify-content: right;
-    color: rgb(219, 163, 89);
-    font-weight: 100;
-    text-decoration: none;
-    justify-content: space-around;
-    padding: 10px;
-    font-size: 18px;
-
-}
 
 .logo{
-    display: inline-flex;
-    float: left;
     left: 0px;
     height: 100px;
-    width: 150px;
-    padding-right: 100px;
+    width: 170px;
     margin: 0px 0px 0px 0px;
+
 }
 
-.name{
+.company-name{
     padding-left: 0px;
     margin-left: 0px;
     padding-right: 100px;
-    left: 100px;
 }
 
 h1{
@@ -56,10 +41,10 @@ h1{
     color: rgb(219, 163, 89);
     font-weight: 100;
     font-size: 14px;
-    padding-left: 40px;
+    padding-left: 50px;
     padding-bottom: 0px;
     padding-top: 4px;
     margin-bottom: 0px;
-    margin-top: 2px;
+    margin-top: 3px;
 
 }
