--- a/split-music/src/Sidedrawer.css
+++ b/split-music/src/Sidedrawer.css
@@ -1,11 +1,11 @@
 .side-drawer{
-    height: 100%;
-    background-color: white;
+    height: 80%;
+    background: url('https://i.imgur.com/MciWgbJ.jpg');
     box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.5);
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 400px;
+    top: 13%;
+    left: 100%;
+    width: 250px;
     z-index: 200;
     transform: translateX(-100%);
     transition: transform 0.3s ease-out;
@@ -29,6 +29,6 @@
 }
 
 .side-drawer a{
-    color: red;
+    color: rgb(219, 163, 89);
     text-decoration: none;
 }
